--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,30 @@
 }
 /* Root area style */
 :root {
+  font-size: 16px;
   --font-train-one: "Train One", cursive, sans-serif;
 }
+/* Body style */
 body {
   width: 100vw;
   height: auto;
 }
+/* Home section style */
 .home {
   width: 100vw;
   height: 100vh;
+  font-family: var(--font-train-one);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
 }
+/* Profile image style */
 .profile-img img {
   width: 4rem;
   height: 5rem;
 }
+/* Image style */
 .image img {
   width: 20rem;
   height: 20rem;
