--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,25 @@ ul > li:last-child > a {
   height: 20rem;
   border-radius: 2em;
 }
+/* Textarea style */
 .text {
   font-size: 1.8em;
   color: azure;
+}
+/* About me page */
+/* About section style */
+.about {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+.about > h1 {
+  width: 80vw;
+  height: 10vh;
+  font-family: var(--font-train-one);
+  font-size: 2.7em;
+  color: var(--color-blue);
 }
