--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,9 @@ legend {
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 .projects > h1 {
   width: 80vw;
@@ -175,6 +176,22 @@ legend {
   font-family: var(--font-train-one);
   font-size: 2.7em;
   color: var(--color-yellow);
+}
+.projects div iframe {
+  width: 10em;
+  height: 2em;
+}
+.logo {
+  width: 15em;
+  height: 3em;
+}
+.mobile-app,
+.youtube-clone,
+.login-app,
+.periodic-table,
+.gallery-images {
+  width: 15em;
+  height: 10em;
 }
 
 /* Contact me page */
@@ -192,17 +209,4 @@ legend {
   font-family: var(--font-train-one);
   font-size: 2.7em;
   color: var(--color-red);
-}
-.projects div iframe {
-  width: 10em;
-  height: 2em;
-}
-.logo {
-  width: 15em;
-  height: 3em;
-}
-.mobile-app,
-.youtube-clone {
-  width: 15em;
-  height: 10em;
 }
