--- a/css/style.css
+++ b/css/style.css
@@ -200,8 +200,9 @@ legend {
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 .contact > h1 {
   width: 80vw;
