--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
+/* Desktop style -  */
 /* Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Train+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@700&family=Train+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@700&family=New+Tegomin&family=Train+One&display=swap");
 /* All elements style */
 * {
   margin: 0;
@@ -13,10 +13,15 @@
   font-size: 16px;
   --font-train-one: "Train One", cursive, sans-serif;
   --font-cormorant: "Cormorant Unicase", cursive, serif;
+  --font-new-tegomin: "New Tegomin", cursive, serif;
   --color-azure: azure;
-  --color-blue: blue;
-  --color-yellow: yellow;
-  --color-red: red;
+  --color-blue: #1f51ff;
+  --color-yellow: #ccff00;
+  --color-red: #ff073a;
+  --color-black: black;
+  --color-lightgreen: lightgreen;
+  --color-purple-neon: #bc13fe;
+  --color-green-neon: #39ff14;
 }
 /* Body style */
 body {
@@ -67,6 +72,53 @@ ul > li:nth-child(2) > a {
 ul > li:last-child > a {
   color: var(--color-red);
 }
+/* Menu animation */
+.bounce-in-top:first-child {
+  animation: bounce-in-top 1.1s both;
+}
+.bounce-in-top:nth-child(2) {
+  animation: bounce-in-top 1.1s both 0.5s;
+}
+.bounce-in-top:last-child {
+  animation: bounce-in-top 1.1s both 1s;
+}
+@keyframes bounce-in-top {
+  0% {
+    transform: translateY(-500px);
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    transform: translateY(-65px);
+    animation-timing-function: ease-in;
+  }
+  72% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+  81% {
+    transform: translateY(-28px);
+    animation-timing-function: ease-in;
+  }
+  90% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+  95% {
+    transform: translateY(-8px);
+    animation-timing-function: ease-in;
+  }
+  100% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+}
+
 /* Profile image style */
 .profile-img img {
   width: 5rem;
@@ -84,17 +136,48 @@ ul > li:last-child > a {
 .text p {
   text-align: center;
 }
+
 /* Image style */
 .image img {
   width: 20rem;
   height: 20rem;
   border-radius: 2em;
 }
+.roll-in-left {
+  animation: roll-in-left 0.6s ease-out both 1.5s;
+}
+
+@keyframes roll-in-left {
+  0% {
+    transform: translateX(300px) rotate(540deg);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+
 /* Textarea style */
 .text {
   font-size: 1.8em;
   color: var(--color-azure);
 }
+.text-focus-in {
+  animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both 1.8s;
+}
+
+@keyframes text-focus-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+
 /* About me page */
 /* About section style */
 .about {
@@ -105,6 +188,10 @@ ul > li:last-child > a {
   align-items: center;
   flex-direction: column;
   background-image: url(../img/3d-carbon-background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: screen;
 }
 /* H1 style */
 .about > h1 {
@@ -122,17 +209,38 @@ ul > li:last-child > a {
   justify-content: space-around;
   align-items: center;
 }
+.about .bounce-in-top {
+  animation-delay: 4s;
+}
 .about-main p {
+  font-family: var(--font-new-tegomin);
   font-size: 1.3em;
   color: var(--color-azure);
 }
+.tracking-in-expand {
+  animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) both 5s;
+}
+
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 p > a {
   text-decoration: none;
   color: silver;
 }
 .about-bottom {
   width: 100vw;
-  height: 60vh;
+  height: 50vh;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 10% 90%;
@@ -147,18 +255,64 @@ legend {
   color: var(--color-azure);
   text-align: center;
 }
+.text-typer {
+  border-right: 0.15em solid var(--color-azure);
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: 0.1em;
+  overflow: hidden;
+  animation: typing 3.5s forwards 5s, blink-caret 0.5s step-end infinite 5s;
+}
+/* The typing effect */
+@keyframes typing {
+  0% {
+    display: 0;
+    opacity: 0;
+    width: 0;
+  }
+
+  100% {
+    display: initial;
+    opacity: 1;
+    width: 60%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  80% {
+    border-color: var(--color-azure);
+  }
+}
 .about-img {
-  display: grid;
+  /* I've tryed to use display grid here but 
+  the images where up each other when I've minimize 
+  the window width*/
+  /* display: grid;
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: repeat(2, 50%);
+  align-items: center; */
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 .about-img img {
-  width: 20rem;
-  height: 12rem;
+  width: 15rem;
+  height: 10rem;
   position: relative;
-  left: 4rem;
+  cursor: pointer;
   border-radius: 10%;
+  transition: 0.5s;
+}
+.about-img img:hover {
+  transform: scale(1.5);
+  transition: 0.5s;
 }
 /* My Projects page */
 /* Projects style */
@@ -169,6 +323,11 @@ legend {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  background-image: url(../img/carbon-fiber-background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: screen;
 }
 .projects > h1 {
   width: 80vw;
@@ -176,6 +335,15 @@ legend {
   font-family: var(--font-train-one);
   font-size: 2.7em;
   color: var(--color-yellow);
+}
+.projects .bounce-in-top {
+  animation: bounce-in-top 1.1s both 6s;
+}
+.projects h2 {
+  font-family: var(--font-cormorant);
+  font-size: 2em;
+  font-weight: bold;
+  color: var(--color-azure);
 }
 .projects div iframe {
   width: 10em;
@@ -203,6 +371,11 @@ legend {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  background-image: url(../img/carbon-fiber-hexagon-background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: screen;
 }
 .contact > h1 {
   width: 80vw;
@@ -210,4 +383,114 @@ legend {
   font-family: var(--font-train-one);
   font-size: 2.7em;
   color: var(--color-red);
+}
+.contact .bounce-in-top {
+  animation: bounce-in-top 1.1s both 5s;
+}
+.contact > div {
+  width: 70vw;
+  height: 30vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.contact > div h2 {
+  font-family: var(--font-new-tegomin);
+  color: var(--color-azure);
+}
+form {
+  width: 30rem;
+  height: 30vh;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+form fieldset {
+  font-family: var(--font-new-tegomin);
+  font-weight: bold;
+  color: var(--color-black);
+  display: flex;
+  justify-content: space-evenly;
+  border-radius: 20%;
+  border: none;
+  background-color: var(--color-lightgreen);
+  opacity: 0.6;
+}
+form fieldset input,
+form fieldset textarea {
+  width: 12vw;
+  text-align: center;
+  border-radius: 15%;
+  border: none;
+}
+form button {
+  font-family: var(--font-cormorant);
+  font-size: 1.5em;
+  border-radius: 30%;
+  border: none;
+  color: var(--color-black);
+  background-color: var(--color-lightgreen);
+  opacity: 0.6;
+  cursor: pointer;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
+button[type="submit"]:hover {
+  color: var(--color-blue);
+  background: var(--color-green-neon);
+  box-shadow: 0 0 10px var(--color-green-neon), 0 0 40px var(--color-green-neon),
+    0 0 80px var(--color-green-neon);
+  opacity: 1;
+  transition-delay: 0.1s;
+}
+
+div h2 > button {
+  border: none;
+  background-color: transparent;
+}
+
+div h2 > button > a {
+  font-family: var(--font-train-one);
+  text-decoration: none;
+  color: var(--color-azure);
+}
+div h2 > button:hover > a {
+  border-radius: 10%;
+  border: none;
+  color: var(--color-black);
+  background-color: var(--color-azure);
+}
+footer div,
+footer > div i {
+  font-family: var(--font-train-one);
+  font-size: 1.1em;
+  text-align: center;
+  color: var(--color-azure);
+  cursor: pointer;
+}
+footer > div {
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 0.5em;
+}
+footer div i {
+  opacity: 0.6;
+  transition: 0.5s;
+}
+footer div i:hover {
+  transform: scale(1.5);
+  opacity: 1;
+  z-index: 1;
+  transition: 0.5s;
+}
+img {
+  transition: 0.5s;
+}
+img:hover {
+  transform: scale(1.3);
+  cursor: pointer;
+  opacity: 1;
+  z-index: 1;
+  transition: 0.5s;
 }
