--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ ul > li:last-child > a {
   height: 20rem;
   border-radius: 2em;
 }
+/* Images animation */
 .roll-in-left {
   animation: roll-in-left 0.6s ease-out both 1.5s;
 }
@@ -163,6 +164,7 @@ ul > li:last-child > a {
   font-size: 1.8em;
   color: var(--color-azure);
 }
+/* Text animation */
 .text-focus-in {
   animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both 1.8s;
 }
@@ -209,6 +211,7 @@ ul > li:last-child > a {
   justify-content: space-around;
   align-items: center;
 }
+/* H1 animation */
 .about .bounce-in-top {
   animation-delay: 4s;
 }
@@ -233,11 +236,13 @@ ul > li:last-child > a {
     opacity: 1;
   }
 }
-
+/* Paragraph and link style */
 p > a {
   text-decoration: none;
   color: silver;
 }
+/* About bottom division */
+/* Grid template */
 .about-bottom {
   width: 100vw;
   height: 50vh;
@@ -249,12 +254,14 @@ p > a {
     "about-img";
   justify-content: center;
 }
+/* Legend style */
 legend {
   font-family: var(--font-cormorant);
   font-size: 1.8em;
   color: var(--color-azure);
   text-align: center;
 }
+/* Text style and text typer animation */
 .text-typer {
   border-right: 0.15em solid var(--color-azure);
   white-space: nowrap;
@@ -263,7 +270,7 @@ legend {
   overflow: hidden;
   animation: typing 3.5s forwards 5s, blink-caret 0.5s step-end infinite 5s;
 }
-/* The typing effect */
+/* Typing effect */
 @keyframes typing {
   0% {
     display: 0;
@@ -278,7 +285,7 @@ legend {
   }
 }
 
-/* The typewriter cursor effect */
+/* Typewriter cursor effect */
 @keyframes blink-caret {
   from,
   to {
@@ -288,6 +295,7 @@ legend {
     border-color: var(--color-azure);
   }
 }
+/* Images style */
 .about-img {
   /* I've tryed to use display grid here but 
   the images where up each other when I've minimize 
@@ -329,6 +337,7 @@ legend {
   background-size: cover;
   background-blend-mode: screen;
 }
+/* Projects section, H1 style*/
 .projects > h1 {
   width: 80vw;
   height: 5vh;
@@ -336,23 +345,23 @@ legend {
   font-size: 2.7em;
   color: var(--color-yellow);
 }
+/* H1 animation */
 .projects .bounce-in-top {
   animation: bounce-in-top 1.1s both 6s;
 }
+/* H2 style */
 .projects h2 {
   font-family: var(--font-cormorant);
   font-size: 2em;
   font-weight: bold;
   color: var(--color-azure);
 }
-.projects div iframe {
-  width: 10em;
-  height: 2em;
-}
+/* First row of images style */
 .logo {
   width: 15em;
   height: 3em;
 }
+/* Second row of images style */
 .mobile-app,
 .youtube-clone,
 .login-app,
@@ -377,6 +386,7 @@ legend {
   background-size: cover;
   background-blend-mode: screen;
 }
+/* Contact section, H1 */
 .contact > h1 {
   width: 80vw;
   height: 5vh;
@@ -384,9 +394,11 @@ legend {
   font-size: 2.7em;
   color: var(--color-red);
 }
+/* Contact, H1 animation */
 .contact .bounce-in-top {
   animation: bounce-in-top 1.1s both 5s;
 }
+/* Contact division style */
 .contact > div {
   width: 70vw;
   height: 30vh;
@@ -394,10 +406,12 @@ legend {
   justify-content: space-between;
   align-items: center;
 }
+/* Contact, H2 style */
 .contact > div h2 {
   font-family: var(--font-new-tegomin);
   color: var(--color-azure);
 }
+/* Form style */
 form {
   width: 30rem;
   height: 30vh;
@@ -405,6 +419,7 @@ form {
   justify-content: space-evenly;
   flex-direction: column;
 }
+/* Form, fieldset style */
 form fieldset {
   font-family: var(--font-new-tegomin);
   font-weight: bold;
@@ -416,6 +431,7 @@ form fieldset {
   background-color: var(--color-lightgreen);
   opacity: 0.6;
 }
+/* Input area and textarea style */
 form fieldset input,
 form fieldset textarea {
   width: 12vw;
@@ -423,6 +439,7 @@ form fieldset textarea {
   border-radius: 15%;
   border: none;
 }
+/* Submit button style */
 form button {
   font-family: var(--font-cormorant);
   font-size: 1.5em;
@@ -435,7 +452,7 @@ form button {
   overflow: hidden;
   transition: 0.2s;
 }
-
+/* Submit button, Hover effect */
 button[type="submit"]:hover {
   color: var(--color-blue);
   background: var(--color-green-neon);
@@ -444,7 +461,7 @@ button[type="submit"]:hover {
   opacity: 1;
   transition-delay: 0.1s;
 }
-
+/* Contact, H2 and button style */
 div h2 > button {
   border: none;
   background-color: transparent;
@@ -455,12 +472,14 @@ div h2 > button > a {
   text-decoration: none;
   color: var(--color-azure);
 }
+/* Button, Hover effect */
 div h2 > button:hover > a {
   border-radius: 10%;
   border: none;
   color: var(--color-black);
   background-color: var(--color-azure);
 }
+/* Footer style */
 footer div,
 footer > div i {
   font-family: var(--font-train-one);
@@ -474,19 +493,23 @@ footer > div {
   justify-content: space-evenly;
   padding-bottom: 0.5em;
 }
+/* Icons style */
 footer div i {
   opacity: 0.6;
   transition: 0.5s;
 }
+/* Icons, Hover effect */
 footer div i:hover {
   transform: scale(1.5);
   opacity: 1;
   z-index: 1;
   transition: 0.5s;
 }
+/* All images transition style */
 img {
   transition: 0.5s;
 }
+/* All images, Hover effect */
 img:hover {
   transform: scale(1.3);
   cursor: pointer;
